terraform/bastion.tf


resource "azurerm_public_ip" "bastion-pip" {
    name                = "bastion-pip"
    location            = azurerm_resource_group.rg.location
    resource_group_name = azurerm_resource_group.rg.name
    allocation_method   = "Static"
    sku                 = "Standard"
}

resource "azurerm_bastion_host" "bastion" {
    name                = "bastion"
    location            = azurerm_resource_group.rg.location
    resource_group_name = azurerm_resource_group.rg.name
    sku                 = "Basic"

    ip_configuration {
        name                 = "configuration"
        subnet_id            = azurerm_subnet.bastion.id
        public_ip_address_id = azurerm_public_ip.bastion-pip.id
    }
}
